RESOLVED FIXED155450
Unable to commit previews in Mobile Safari
https://bugs.webkit.org/show_bug.cgi?id=155450
Summary Unable to commit previews in Mobile Safari
Beth Dakin
Reported 2016-03-14 11:49:42 PDT
Unable to commit previews in Mobile Safari rdar://problem/25135529 This is a regression from: http://trac.webkit.org/changeset/198070
Attachments
Patch (4.36 KB, patch)
2016-03-14 11:52 PDT, Beth Dakin
no flags
Patch (4.36 KB, patch)
2016-03-14 12:06 PDT, Beth Dakin
thorton: review+
Beth Dakin
Comment 1 2016-03-14 11:52:29 PDT
mitz
Comment 2 2016-03-14 11:53:36 PDT
Comment on attachment 273997 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=273997&action=review > Source/WebKit2/ChangeLog:14 > + when a customer view controller has been provided. custom
Beth Dakin
Comment 3 2016-03-14 12:06:01 PDT
Beth Dakin
Comment 4 2016-03-14 12:34:29 PDT
Note You need to log in before you can comment on or make changes to this bug.